AUTOMAKE_OPTIONS=foreign
AM_CFLAGS=-DLINUX_OS

noinst_LIBRARIES=libzcrt.a
libzcrt_a_SOURCES=./zcrtlib/zarraylist.c ./zcrtlib/zbuf.c ./zcrtlib/zcmm.c ./zcrtlib/zevent.c ./zcrtlib/zhash.c ./zcrtlib/zlinklist.c ./zcrtlib/zlog.c ./zcrtlib/zmodule.c ./zcrtlib/zschedule.c ./zcrtlib/ztimer.c ./zcrtlib/zcrt_os_linux.c ./zcrtlib/zstr.c ./zipc/zipc_parse.c ./zipc/zipc_server.c ./zipc/zipc_server_os.c ./zipc/zipc_tlv.c

SUBDIRS=. build

