#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(testzcrt,1.0)
AM_INIT_AUTOMAKE(testzcrt,1.0)
AC_CONFIG_SRCDIR([build/tests/test_api_impl.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
#AC_PROG_RANLIB
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([memory.h netinet/in.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([memset select socket])

AC_ARG_ENABLE([kernel],
     AS_HELP_STRING([--enable-kernel, kernel module]),
	[], [enable_kernel=no])

AM_CONDITIONAL([KERNEL_OS], [test "$enable_kernel" = "yes"])

AC_CONFIG_FILES([Makefile
                 build/Makefile])
AC_OUTPUT
